--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gnome-authenticator (3.32.2+dfsg1-2) UNRELEASED; urgency=medium
+
+  * d/control: Update Maintainer field with new Debian Python Team
+    contact address.
+
+ -- Ondřej Nový <onovy@debian.org>  Thu, 24 Sep 2020 08:42:10 +0200
+
 gnome-authenticator (3.32.2+dfsg1-1) experimental; urgency=medium
 
   * Initial release (Closes: #958555)
