--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,17 @@
-gnome-authenticator (3.32.2+dfsg1-2) UNRELEASED; urgency=medium
+gnome-authenticator (3.32.2+dfsg1-2) unstable; urgency=medium
 
+  [ Ondřej Nový ]
   * d/control: Update Maintainer field with new Debian Python Team
     contact address.
   * d/control: Update Vcs-* fields with new Debian Python Team Salsa
     layout.
 
- -- Ondřej Nový <onovy@debian.org>  Thu, 24 Sep 2020 08:42:10 +0200
+  [ Henry-Nicolas Tourneur ]
+  * Upload to unstable
+  * d/control: add missing dependencies on libhandy
+  * d/tests: mark autopkgtest as superficial
+
+ -- Henry-Nicolas Tourneur <debian@nilux.be>  Mon, 28 Sep 2020 15:20:00 +0000
 
 gnome-authenticator (3.32.2+dfsg1-1) experimental; urgency=medium
 
