--- a/debian/changelog
+++ b/debian/changelog
@@ -9,7 +9,7 @@ gnome-authenticator (3.32.2+dfsg1-2) unstable; urgency=medium
   [ Henry-Nicolas Tourneur ]
   * Upload to unstable
   * d/control: add missing dependencies on libhandy
-  * d/tests: mark autopkgtest as superficial and fix path issue
+  * d/tests: mark autopkgtest as superficial, allow-stderr and fix path issue
   * d/patches/000_handle_svg_removal.patch: apply DEP-3
   * d/patches/001_python38-cleanup.patch: 
     prevent a startup crash with Python 3.8
