--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-gnome-authenticator (3.32.2+dfsg1-3) UNRELEASED; urgency=medium
+gnome-authenticator (3.32.2+dfsg1-3) unstable; urgency=medium
 
+  [ Debian Janitor ]
   * Set upstream metadata fields: Bug-Database, Bug-Submit, Repository,
     Repository-Browse.
 
- -- Debian Janitor <janitor@jelmer.uk>  Tue, 17 Nov 2020 20:01:06 -0000
+ -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 21 Aug 2021 13:57:08 +0100
 
 gnome-authenticator (3.32.2+dfsg1-2) unstable; urgency=medium
 
