--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gnome-authenticator (3.32.2+dfsg1-4) unstable; urgency=medium
+
+  * d/patches: add 002_fix_meson_errors.patch to solve an FTBFS with meson 0.60
+
+ -- Henry-Nicolas Tourneur <debian@nilux.be>  Mon, 01 Nov 2021 10:15:11 +0000
+
 gnome-authenticator (3.32.2+dfsg1-3) unstable; urgency=medium
 
   [ Debian Janitor ]
