--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gnome-authenticator (3.32.2+dfsg1-5) UNRELEASED; urgency=medium
+
+  * Update lintian override info format in
+    d/gnome-authenticator.lintian-overrides on line 2.
+
+ -- Debian Janitor <janitor@jelmer.uk>  Mon, 21 Nov 2022 03:59:01 -0000
+
 gnome-authenticator (3.32.2+dfsg1-4) unstable; urgency=medium
 
   * d/patches: add 002_fix_meson_errors.patch to solve an FTBFS with meson 0.60
