Build with meson/cargo

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+gnome-authenticator (4.5.0-1) unstable; urgency=medium
+
+  * Team upload
+  * New upstream version 4.5.0
+  * Prevent further repacks with qrscanner-symbolic license change
+  * Drop custom CI config
+  * Build with meson/cargo
+
+ -- Bastian Germann <bage@debian.org>  Tue, 03 Sep 2024 21:03:18 +0200
+
 gnome-authenticator (3.32.2+dfsg1-5) unstable; urgency=medium
 
   [ Debian Janitor ]
